# stopwatch

./: CMakeLists.txt  LICENSE.MIT  README.md
demo/: CMakeLists.txt  demo-measure.cpp
src/: stopwatch.hpp
src/bosswestfalen/: stopwatch.hpp
test/: CMakeLists.txt
test/compiling-test/: CMakeLists.txt  compile-nothrow-assignable.cpp  compile-nothrow-invocable-const.cpp  compile-nothrow-invocable.cpp  compile-rvalue-invocable.cpp  dont-compile-rvalue-assignment.cpp  dont-compile-rvalue-invocable.cpp  dont-compile-stopwatch-copy.cpp  dont-compile-throwable-assignment.cpp  dont-compile-throwable-invocable.cpp
test/unit-test/: CMakeLists.txt  test-assign.cpp  test-invoce.cpp
